# full-stack-fastapi-postgresql

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
scripts/: format.sh  generate_cookiecutter_config.py
{{cookiecutter.project_slug}}/: README.md  cookiecutter-config-file.yml  docker-compose.yml
{{cookiecutter.project_slug}}/backend/: gunicorn_conf.py
{{cookiecutter.project_slug}}/backend/app/: .flake8  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/backend/app/alembic/: env.py
{{cookiecutter.project_slug}}/backend/app/alembic/versions/: d4867f3a4c0a_first_revision.py
{{cookiecutter.project_slug}}/backend/app/app/: tests_pre_start.py  utils.py
{{cookiecutter.project_slug}}/backend/app/app/api/: deps.py
{{cookiecutter.project_slug}}/backend/app/app/api/api_v1/endpoints/: items.py  login.py  users.py
{{cookiecutter.project_slug}}/backend/app/app/core/: celery_app.py  config.py  security.py
{{cookiecutter.project_slug}}/backend/app/app/crud/: __init__.py  base.py  crud_item.py  crud_user.py
{{cookiecutter.project_slug}}/backend/app/app/db/: init_db.py  session.py
{{cookiecutter.project_slug}}/backend/app/app/models/: __init__.py
{{cookiecutter.project_slug}}/backend/app/app/schemas/: __init__.py
{{cookiecutter.project_slug}}/backend/app/app/tests/: conftest.py
{{cookiecutter.project_slug}}/backend/app/app/tests/api/api_v1/: test_celery.py  test_items.py  test_login.py  test_users.py
{{cookiecutter.project_slug}}/backend/app/app/tests/crud/: test_item.py  test_user.py
{{cookiecutter.project_slug}}/backend/app/app/tests/utils/: item.py  user.py  utils.py
{{cookiecutter.project_slug}}/backend/app/scripts/: lint.sh
{{cookiecutter.project_slug}}/frontend/: Dockerfile
{{cookiecutter.project_slug}}/scripts/: test.sh
