[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.18.3"
fastapi = "^0.82.0"
python-multipart = "^0.0.5"
email-validator = "^1.2.1"
requests = "^2.28.1"
celery = "^5.2.7"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^8.0.1"
pydantic = "^1.10.2"
emails = "^0.6"
raven = "^6.10.0"
gunicorn = "^20.1.0"
jinja2 = "^3.1.2"
psycopg2-binary = "^2.9.3"
alembic = "^1.8.1"
sqlalchemy = "^1.4.40"
pytest = "^7.1.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
sentry-sdk = "^1.12.1"
asyncpg = "^0.27.0"
pytest-asyncio = "^0.20.3"
httpx = "^0.23.1"

[tool.poetry.dev-dependencies]
mypy = "^1.4.1"
black = "^23.3.0"
isort = "^5.10.1"
autoflake = "^1.5.3"
flake8 = "^5.0.4"
pytest = "^7.1.3"
sqlalchemy2-stubs = "^0.0.2a27"
pytest-cov = "^4.0.0"

[tool.black]
line-length = 100
include = '(mypy_boto3_builder|types_s3transfer|tests)/.*\.pyi?$'
target-version = [
    'py37',
    'py38',
    'py39',
    'py310',
    'py311',
]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = [
    "app",
    "tests",
]
src_paths = []

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
